--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-Helps navigate paginated web pages. Instead of finding and clicking a link, simply press "[" or "]"
+Helps navigate paginated web pages in Chrome. Instead of finding and clicking a link, simply press "[" or "]"
 
 Install the crx file in chrome.
 Press "]" to go to the next page.
